--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,8 +7,8 @@
 <body>
 	<h1>Form</h1>
     <form action="#" th:action="@{/}" th:object="${city}" method="post">
-    	<p>Id: <input type="text" th:field="*{name}" /></p>
-        <p>Message: <input type="text" th:field="*{province}" /></p>
+    	<p>City: <input type="text" th:field="*{name}" /></p>
+        <p>Province: <input type="text" th:field="*{province}" /></p>
         <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
     </form>
 </body>
