--- a/src/main/resources/templates/response.html
+++ b/src/main/resources/templates/response.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Response</h1>
-    <p th:text="'name: ' + ${city.name}" />
-    <p th:text="'province: ' + ${city.province}" />
-    <a href="/">Submit another city infomation</a>
+	<h1>录入结果</h1>
+    <p th:text="'城市: ' + ${city.name}" />
+    <p th:text="'省份: ' + ${city.province}" />
+    <a href="/mockapp">Submit another city infomation</a>
 </body>
 </html>
